overprovision.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overprovision
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: overprovision
          image: nginx
          resources:
            requests:
              cpu: 1m
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
              topologyKey: 'kubernetes.io/hostname'
