service.yaml
---
apiVersion: v1
kind: Service
metadata:
  # name: service-user
  name: service-user-active
  namespace: service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: user
---
apiVersion: v1
kind: Service
metadata:
  name: service-user-preview
  namespace: service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: user
---
apiVersion: v1
kind: Service
metadata:
  # name: service-products
  name: service-products-active
  namespace: service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: products
---
apiVersion: v1
kind: Service
metadata:
  name: service-products-preview
  namespace: service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: products
---
apiVersion: v1
kind: Service
metadata:
  name: service-auth-active
  namespace: service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: auth
---
apiVersion: v1
kind: Service
metadata:
  name: service-auth-preview
  namespace: service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: auth
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: service-product-backoffice
#  namespace: service
#spec:
#  ports:
#    - port: 8080
#      protocol: TCP
#  selector:
#    for: service-product-backoffice
#    type: service
