destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-user
  namespace: service
spec:
  host: service-user-active.service.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-products
  namespace: service
spec:
  host: service-products-active.service.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-auth
  namespace: service
spec:
  host: service-auth-active.service.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
