istio-alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: {input your acm arm}
    alb.ingress.kubernetes.io/security-groups: {input your sg id}
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - host: api.multi-learn.com
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
