istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: multi-learn-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "api.multi-learn.com"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
      - "api.multi-learn.com"
      tls:
        credentialName: "istio-ingressgateway-certs"
        mode: SIMPLE

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: multi-learn-vs
  namespace: istio-system
spec:
  hosts:
    - "api.multi-learn.com"
  gateways:
    - multi-learn-gateway
  http:
    - match:
        - uri:
            prefix: /api/users
      route:
        - destination:
            host: service-user-active.service.svc.cluster.local
            port:
              number: 8080
      corsPolicy:
        allowOrigin:
          - "http://localhost:3000"
          - "https://www.multi-learn.com"
          - "https://api.multi-learn.com"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - DELETE
        allowHeaders:
          - Authorization
          - Content-Type
          - X-Requested-With
        allowCredentials: true
        exposeHeaders:
          - Set-Cookie
        maxAge: "86400s"
    - match:
        - uri:
            prefix: /api/products
      route:
        - destination:
            host: service-products-active.service.svc.cluster.local
            port:
              number: 8080
      timeout: 1h  # SSE 연결을 위한 타임아웃 설정
      corsPolicy:
        allowOrigin:
          - "http://localhost:3000"
          - "https://www.multi-learn.com"
          - "https://api.multi-learn.com"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - DELETE
        allowHeaders:
          - Authorization
          - Content-Type
          - X-Requested-With
          - Cache-Control
          - Connection
        allowCredentials: true
        exposeHeaders:
          - Set-Cookie
        maxAge: "86400s"
      headers:
        response:
          set:
            Cache-Control: "no-cache"
            Content-Type: "text/event-stream"
            Connection: "keep-alive"
    - match:
        - uri:
            prefix: /auth
      route:
        - destination:
            host: service-auth-active.service.svc.cluster.local
            port:
              number: 8080
      corsPolicy:
        allowOrigin:
          - "http://localhost:3000"
          - "https://www.multi-learn.com"
          - "https://api.multi-learn.com"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - DELETE
        allowHeaders:
          - Authorization
          - Content-Type
          - X-Requested-With
        allowCredentials: true
        exposeHeaders:
          - Set-Cookie
        maxAge: "86400s"
